# overwatch_manager

./: .gitignore  AuthenticationPopup.qml  AuthenticationWrapper.qml  CMakeLists.txt  DraggableItem.qml  DropdownMenu.qml  IDInfoScreen.qml  LoginScreen.qml  MenuButton.qml  PageManager.qml  Polygon.qml  README.md  RegistrationScreen.qml  RoundCornersButton.qml  TextField.qml  TextLink.qml  connection.cpp  connection.h  main.cpp  main.qml  pendingconnection.cpp  protocol.h  qml.qrc  src.qrc  tcpserver.cpp  tcpserver.h
balancer/: balancer.cpp  balancer.h  game.h  player.cpp  player.h  simplebalancer.cpp  simplebalancer.h  team.cpp  team.h
components/: clipboardproxy.cpp  clipboardproxy.h  fpstext.cpp  fpstext.h
configs/: configurer.cpp  configurer.h
network/: clientconnection.cpp  clientconnection.h
qml/: ApplicationSettings.qml  ArrowButton.qml  AuthenticationWrapper.qml  CustomCheckbox.qml  CustomTextField.qml  CustomToolTip.qml  IDInfoScreen.qml  LoginScreen.qml  RegistrationInput.qml  RegistrationScreen.qml  SingleDigitInput.qml  TextField.qml  TextLink.qml  main.qml
qml/Screens/: LoginScreen.qml  qmldir
qml/controls/: ArrowButton.qml  CustomTextField.qml  DraggableItem.qml  DropdownMenu.qml  RoundCornersButton.qml  SingleDigitInput.qml  qmldir
utils/: qstringarray.h  stringarray.h
